--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "path": "^0.12.7",
+    "url": "^0.11.4",
     "ws": "^8.18.3"
   }
 }
